Fix footer spacing for mobile

--- a/src/scss/_site-footer.scss
+++ b/src/scss/_site-footer.scss
@@ -1,6 +1,6 @@
 .site-footer {
   margin: 0 auto;
-  padding: 72px 0;
+  padding: 72px 16px;
   max-width: 64ch;
 }
 
